--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,12 +39,34 @@ jobs:
           pip install --user buildozer cython
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+      - name: Setup Android SDK and accept licenses
+        run: |
+          mkdir -p $HOME/.buildozer/android/platform
+          cd $HOME/.buildozer/android/platform
+          wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
+          unzip -q commandlinetools-linux-11076708_latest.zip
+          mkdir -p android-sdk/cmdline-tools
+          mv cmdline-tools android-sdk/cmdline-tools/latest
+          export ANDROIDSDK=$HOME/.buildozer/android/platform/android-sdk
+          yes | $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;34.0.0"
+
       - name: Build with Buildozer
         run: |
+          export ANDROIDSDK=$HOME/.buildozer/android/platform/android-sdk
+          export ANDROIDAPI=31
+          export ANDROIDMINAPI=21
+          
           buildozer init
           sed -i 's/title = My Application/title = Банк Кияни/g' buildozer.spec
           sed -i 's/package.name = myapp/package.name = kiyanibank/g' buildozer.spec
           echo "android.accept_sdk_license = True" >> buildozer.spec
+          echo "android.ndk = 25c" >> buildozer.spec
+          echo "android.sdk_path = $ANDROIDSDK" >> buildozer.spec
+          echo "android.build_tools_version = 34.0.0" >> buildozer.spec
+          echo "android.api = 31" >> buildozer.spec
+          echo "android.minapi = 21" >> buildozer.spec
+          
           buildozer -v android debug
 
       - name: Upload APK
